07_rest/manifests/01_deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice
  labels:
    app: checkoutservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkoutservice
  template:
    metadata:
      labels:
        app: checkoutservice
    spec:
      containers:
      - image: gmnvnorlov/ms-arch-tasks-checkoutservice:1.0.0
        name: checkoutservice-container
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /api/checkoutservice/actuator/health
            port: 8080
        readinessProbe:
          httpGet:
            path: /api/checkoutservice/actuator/health
            port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice
  labels:
    app: orderservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
      - image: gmnvnorlov/ms-arch-tasks-orderservice:1.0.0
        name: orderservice-container
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /api/orderservice/actuator/health
            port: 8080
        readinessProbe:
          httpGet:
            path: /api/orderservice/actuator/health
            port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificationservice
  labels:
    app: notificationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notificationservice
  template:
    metadata:
      labels:
        app: notificationservice
    spec:
      containers:
      - image: gmnvnorlov/ms-arch-tasks-notificationservice:1.0.0
        name: notificationservice-container
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /api/notificationservice/actuator/health
            port: 8080
        readinessProbe:
          httpGet:
            path: /api/notificationservice/actuator/health
            port: 8080
