07_rest/manifests/02_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
  labels:
    app: checkoutservice
spec:
  type: ClusterIP
  selector:
    app: checkoutservice
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: orderservice
  labels:
    app: orderservice
spec:
  type: ClusterIP
  selector:
    app: orderservice
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: notificationservice
  labels:
    app: notificationservice
spec:
  type: ClusterIP
  selector:
    app: notificationservice
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
