07_rest/manifests/03_ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: checkoutservice
  labels:
    app: checkoutservice
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /api/checkoutservice
            pathType: Prefix
            backend:
              service:
                name: checkoutservice
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orderservice
  labels:
    app: orderservice
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /api/orderservice
            pathType: Prefix
            backend:
              service:
                name: orderservice
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notificationservice
  labels:
    app: notificationservice
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /api/notificationservice
            pathType: Prefix
            backend:
              service:
                name: notificationservice
                port:
                  number: 8080
